Emacs - Add explain-pause-mode

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -2096,6 +2096,11 @@ Obvious ones:
     "C-p" #'profiler-start
     "C-r" #'profiler-report
     "C-s" #'profiler-stop))
+
+(noct-use ( :elpaca explain-pause-mode
+            :host github
+            :repo "lastquestion/explain-pause-mode")
+  (general-def noct-toggle-map "e" #'explain-pause-mode))
 #+end_src
 
 ** Recentf
